--- a/projeto-livros/src/index.html
+++ b/projeto-livros/src/index.html
@@ -1,13 +1,58 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>ProjetoLivros</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://use.fontawesome.com/fd6609d8e9.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,100&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
-</body>
+
+  <body>
+    <app-root></app-root>
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            Produzido por Lucas Coquenão, Miriam Menezes, Rebeca Palmeira, Bruno de Frontin, Guilherme Carvalho e Jota
+            Nascimento
+          </div>
+        </div>
+      </div>
+
+      <a id="subirTopo">
+        <i class="fa fa-arrow-up"></i>
+      </a>
+
+
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+      <script type="text/javascript">
+        jQuery(document).ready(function () {
+
+          jQuery("#subirTopo").hide();
+
+          jQuery('a#subirTopo').click(function () {
+            jQuery('body,html').animate({
+              scrollTop: 0
+            }, 800);
+            return false;
+          });
+
+          jQuery(window).scroll(function () {
+            if (jQuery(this).scrollTop() > 100) {
+              jQuery('#subirTopo').fadeIn();
+            } else {
+              jQuery('#subirTopo').fadeOut();
+            }
+          });
+        });
+      </script>
+    </footer>
+  </body>
 </html>
